# etl-deploy-cicd-aws

./: Dockerfile  main.py  pyproject.toml
